@@ -262,7 +262,7 @@ This documentation is for version &appversion; of <application>&app;</applicatio
 
 <para><emphasis>H.323 URL's</emphasis></para>
 
-<para>H.323 URL's are formatted as such "h323:[user@][host:[port]]"</para>
+<para>H.323 URL's are formatted as such "h323:[user@][host[:port]]"</para>
 
 <para>This permits you to:
   <itemizedlist>
@@ -276,7 +276,7 @@ This documentation is for version &appversion; of <application>&app;</applicatio
 
 <para><emphasis>CALLTO URL's</emphasis></para>
 
-<para>Callto URL's are formatted as such "callto:[user@][host:[port]]"</para>
+<para>Callto URL's are formatted as such "callto:[user@][host[:port]]"</para>
 
 <para>Callto URL's and H.323 URL's are formatted exactly the same except however callto urls also support ILS lookups through callto URLS of the type: callto:ils_server/user_mail.</para>
 
