@@ -273,7 +273,7 @@ l'accès aux GateKeepers, la mise en conférence de multiples utilsateurs en uti
     </para>
 
     <para>
-      Les adresses H.323 sont construites de la manière suivante: "h323:[utilisateur@][hôte:[port]]"
+      Les adresses H.323 sont construites de la manière suivante: "h323:[utilisateur@][hôte[:port]]"
     </para>
 
     <para>
@@ -312,7 +312,7 @@ l'accès aux GateKeepers, la mise en conférence de multiples utilsateurs en uti
     </para>
 
     <para>
-       Les adresses Callto sont construites de la manière suivante: "callto:[utilisateur@][hôte:[port]]"
+       Les adresses Callto sont construites de la manière suivante: "callto:[utilisateur@][hôte[:port]]"
     </para>
 
     <para>
