@@ -1,4 +1,9 @@
-2004-12-26  Miguel Rodríguez Pérez  <miguelrp@gmail.com>
+2004-12-28  Damien Sandras  <dsandras@gnome.org>
+
+	* C/gnomemeeting.xml, fr/gnomemeeting.xml: Changed host:[port] into
+	host[:port] thanks to Hugh Daniel.
+
+2004-12-26  Miguel Rodriguez Perez  <miguelrp@gmail.com>
 
 	* po/es.po
 	* src/callbacks.cpp (about_callback): 
